// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > snapshot: checked prop 1`] = `
<span
  class="ucl-uikit-radio css-1cs0hw5"
>
  <input
    checked=""
    class="css-19qtec1"
    data-testid="ucl-uikit-radio"
    type="radio"
  />
  <div
    class="css-qvbxw4"
  />
</span>
`;

exports[`Radio > snapshot: no props 1`] = `
<span
  class="ucl-uikit-radio css-15co61d"
>
  <input
    class="css-19qtec1"
    data-testid="ucl-uikit-radio"
    type="radio"
  />
</span>
`;

exports[`Radio > snapshot: testId prop 1`] = `
<span
  class="ucl-uikit-radio css-15co61d"
>
  <input
    class="css-19qtec1"
    data-testid="test123"
    type="radio"
  />
</span>
`;
